--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -45,6 +45,10 @@ body {
 }
 /* Шапка */
 .header {
+  /* position: fixed;
+  width: 100%;
+  min-height: 80px;
+  top: 0; */
   background-color: var(--add-color);
   border-bottom: 1px solid var(--line-footer);
 }
@@ -218,6 +222,32 @@ body {
   letter-spacing: 0.06em;
 
   cursor: pointer;
+}
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 /* Особливості */
 .container {
@@ -649,8 +679,8 @@ body {
   padding-left: 24px;
   padding-right: 24px;
 
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
 
   font-family: Roboto;
   font-style: normal;
@@ -658,7 +688,7 @@ body {
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
-  color: #ffffff;
+  color: var(--add-color);
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
 }
