--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -107,7 +107,19 @@ body {
 
   text-decoration: none;
 }
-
+.hover-icon {
+  background-image: url(../images/hover.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  height: 80px;
+}
+.hover-icon-portfolio {
+  background-image: url(../images/hoverportfolio.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  width: 78px;
+  height: 80px;
+}
 .contact-nav .item + .item {
   margin-left: 50px;
 }
@@ -224,6 +236,7 @@ body {
 
   cursor: pointer;
 }
+/* Модальне вікно */
 .backdrop {
   position: fixed;
   left: 0;
@@ -250,6 +263,20 @@ body {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+.modal-button {
+  margin-top: 8px;
+  margin-left: 490px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../images/icon-close.svg);
+  background-repeat: no-repeat;
+  background-color: #ffffff;
+  background-position: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 /* Особливості */
 .container {
   margin-left: auto;
@@ -688,6 +715,11 @@ body {
   width: 100%;
   height: 100%;
 
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+  transform: translateY(0);
+}
+.card-thumb-text .text {
   font-family: Roboto;
   font-style: normal;
   font-weight: 400;
@@ -695,15 +727,7 @@ body {
   line-height: 28px;
   letter-spacing: 0.03em;
   color: var(--add-color);
-  background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-  transform: translateY(100%);
 }
-/* .card-thumb-text:focus,
-.card-thumb-text:hover {
-  opacity: 0.9;
-  transform: translateY(0);
-} */
 .card-content {
   padding: 20px 24px;
   border: 1px solid var(--card-border);
