--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -93,12 +93,18 @@ body {
   color: var(--title-text-color);
 
   text-decoration: none;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav-link:hover,
 .site-nav-link:focus {
   color: var(--accent-color);
 }
 .site-nav-сurrent {
+  position: relative;
+
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -107,19 +113,31 @@ body {
 
   text-decoration: none;
 }
-.hover-icon {
+.site-nav-сurrent::after {
+  position: absolute;
+  bottom: 0;
+
+  content: "";
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
+}
+/* .hover-icon {
   background-image: url(../images/hover.svg);
   background-repeat: no-repeat;
   background-position: bottom;
   height: 80px;
-}
-.hover-icon-portfolio {
+} */
+/* .hover-icon-portfolio {
   background-image: url(../images/hoverportfolio.svg);
   background-repeat: no-repeat;
   background-position: bottom;
   width: 78px;
   height: 80px;
-}
+} */
 .contact-nav .item + .item {
   margin-left: 50px;
 }
@@ -139,6 +157,10 @@ body {
   color: var(--primary-text-color);
 
   text-decoration: none;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-nav-m:hover,
@@ -449,6 +471,10 @@ body {
   background-color: var(--add-color);
   border-radius: 50%;
   color: var(--icon-color);
+
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icons__link:hover,
 .social-icons__link:focus {
@@ -490,6 +516,10 @@ body {
   border-radius: 4px;
   justify-content: center;
   margin-right: 30px;
+
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-company:last-child {
   margin-right: 0;
@@ -505,7 +535,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
   color: var(--icon-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .company-logo:hover,
 .company-logo:focus {
@@ -599,7 +634,12 @@ body {
   height: 44px;
   width: 44px;
   border-radius: 50%;
+
   background-color: var(--icon-bg);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social:hover,
 .social:focus {
@@ -661,6 +701,10 @@ body {
   letter-spacing: 0.03em;
 
   cursor: pointer;
+
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-button:hover,
 .portfolio-button:focus {
@@ -717,7 +761,9 @@ body {
 
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
-  transform: translateY(0);
+  transform: translateY(100%);
+  transition: transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
 }
 .card-thumb-text .text {
   font-family: Roboto;
