--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -747,6 +747,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .card-thumb-text {
   position: absolute;
@@ -762,7 +763,7 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
   transform: translateY(100%);
-  transition: transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   pointer-events: none;
 }
 .card-thumb-text .text {
