--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,6 +28,11 @@ html {
   --card-border: #eeeeee;
   --icon-bg: rgba(255, 255, 255, 0.1);
   --icon-color: #afb1b8;
+  --cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
+  --back-card: rgba(33, 150, 243, 0.9);
+  --back-work: rgba(47, 48, 58, 0.8);
+  --modal-border: rgba(0, 0, 0, 0.1);
+  --back-modal: rgba(0, 0, 0, 0.2);
 }
 
 img {
@@ -96,7 +101,7 @@ body {
 
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 .site-nav-link:hover,
 .site-nav-link:focus {
@@ -122,22 +127,9 @@ body {
   display: block;
   width: 100%;
   height: 4px;
-  background-color: #2196f3;
+  background-color: var(--accent-color);
   border-radius: 2px;
 }
-/* .hover-icon {
-  background-image: url(../images/hover.svg);
-  background-repeat: no-repeat;
-  background-position: bottom;
-  height: 80px;
-} */
-/* .hover-icon-portfolio {
-  background-image: url(../images/hoverportfolio.svg);
-  background-repeat: no-repeat;
-  background-position: bottom;
-  width: 78px;
-  height: 80px;
-} */
 .contact-nav .item + .item {
   margin-left: 50px;
 }
@@ -160,7 +152,7 @@ body {
 
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .contact-nav-m:hover,
@@ -265,24 +257,30 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--back-modal);
+
+  opacity: 1;
+  transition: opacity 250ms var(--cubic-bezier);
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.2);
+}
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--cubic-bezier);
 
   min-width: 528px;
   min-height: 581px;
 
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: var(--add-color);
+  box-shadow: var(--shadow);
   border-radius: 4px;
 }
 .modal-button {
@@ -292,9 +290,9 @@ body {
   height: 30px;
   background-image: url(../images/icon-close.svg);
   background-repeat: no-repeat;
-  background-color: #ffffff;
+  background-color: var(--add-color);
   background-position: center;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--modal-border);
   border-radius: 50%;
   cursor: pointer;
 }
@@ -401,7 +399,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--add-color);
-  background-color: rgba(47, 48, 58, 0.8);
+  background-color: var(--back-work);
   padding-top: 27px;
   padding-bottom: 27px;
   bottom: 0;
@@ -474,7 +472,7 @@ body {
 
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 .social-icons__link:hover,
 .social-icons__link:focus {
@@ -519,7 +517,7 @@ body {
 
   transition-property: border;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 .client-company:last-child {
   margin-right: 0;
@@ -540,7 +538,7 @@ body {
 
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 .company-logo:hover,
 .company-logo:focus {
@@ -639,7 +637,7 @@ body {
 
   transition-property: background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 .social:hover,
 .social:focus {
@@ -704,7 +702,7 @@ body {
 
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 .portfolio-button:hover,
 .portfolio-button:focus {
@@ -760,10 +758,10 @@ body {
   width: 100%;
   height: 100%;
 
-  background-color: rgba(33, 150, 243, 0.9);
+  background-color: var(--back-card);
   opacity: 0;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms var(--cubic-bezier) 250ms;
   pointer-events: none;
 }
 .card-thumb-text .text {
